2014-08-28  David Malcolm  <dmalcolm@redhat.com>

	* shrink-wrap.h (active_insn_between): Strengthen both params from
	rtx to rtx_insn *.
	* function.c (active_insn_between): Likewise.

2014-08-28  David Malcolm  <dmalcolm@redhat.com>

	* genattr.c (main): When writing out insn-attr.h, strengthen param
	of dfa_clear_single_insn_cache from rtx to rtx_insn *.
	* genautomata.c (output_dfa_clean_insn_cache_func): Likewise when
	writing out the definition of dfa_clear_single_insn_cache to the
	generated insn-automata.c

2014-08-28  David Malcolm  <dmalcolm@redhat.com>

	* resource.h (clear_hashed_info_for_insn): Strengthen param from
	rtx to rtx_insn *.
	(incr_ticks_for_insn): Likewise.
	(init_resource_info): Likewise.

	* resource.c (init_resource_info): Likewise.
	(clear_hashed_info_for_insn): Likewise.
	(incr_ticks_for_insn): Likewise.

	* reorg.c (delete_scheduled_jump): Strengthen param "insn" from
	rtx to rtx_insn *.
	(steal_delay_list_from_target): Use methods of "seq".
	(try_merge_delay_insns): Use methods of "merged_insns".
	(update_block): Strengthen param "insn" from rtx to rtx_insn *.
	(reorg_redirect_jump): Likewise for param "jump".

2014-08-28  David Malcolm  <dmalcolm@redhat.com>

	* insn-addr.h (insn_addresses_new): Strengthen param "insn" from
	rtx to rtx_insn *.
	* config/s390/s390.c (s390_split_branches): Eliminate top-level
	local rtx "tmp", in favor of new local rtx "mem" and rtx_insn *
	"set_insn".
	(s390_mainpool_finish): In three places, split out a local rtx
	"insn" into a local rtx - "set" or "pat" - and a rtx_insn *
	"insn".  Strengthen local "pool_end" from rtx to rtx_code_label *
	 and split another local rtx "insn" out into rtx "pat" and
	rtx_insn * "insn".
	* config/sh/sh.c (output_branchy_insn): Rather than working
	directly on operands[9], introduce local rtx_code_label *
	variables named "lab" in two places, working on them, and then
	assigning them to operands[9], so that the intervening operations